k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guguhaus-frontend
  namespace: guguhaus
spec:
  selector:
    app: guguhaus-frontend
  ports:
    - port: 3000
      targetPort: 3000
